--- a/src/main/resources/db/changelog/changelog.yaml
+++ b/src/main/resources/db/changelog/changelog.yaml
@@ -1,2 +1,8 @@
 databaseChangeLog:
-  -
+  - include:
+      file: changes/15082025_create_tables.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: changes/24282025_create_tables.yaml
+      relativeToChangelogFile: true
+
